--- a/main.css
+++ b/main.css
@@ -374,11 +374,11 @@ hr {
 }
 
 /********************************
-********************************
+*********************************
         
         MOBIL SKÄRM
 
-*********************************
+**********************************
 **********************************/
 
 @media only screen and (max-width: 600px) {
@@ -464,6 +464,10 @@ max-width: 500px;
 
 /********************************
 ********************************/
+
+
+
+
 
 /*********************************
 **********************************
