--- a/main.css
+++ b/main.css
@@ -365,15 +365,15 @@ hr {
     color: black;
     display: inline-block;
 }
-.event-buttons, .article-buttons, .author-buttons {
+.event-buttons, .article-buttons, .employee-buttons {
     margin: auto;
     bottom: 0;
 }
-.event-buttons *, .article-buttons *, .author-buttons * {
+.event-buttons *, .article-buttons *, .employee-buttons * {
     display: inline;
     text-decoration: none;
 }
-.article-btn, .event-btn, .author-btn {
+.article-btn, .event-btn, .employee-btn {
     background-color: black;
     color: white;
     padding: 1em;
