--- a/main.css
+++ b/main.css
@@ -402,9 +402,17 @@ hr {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
+    width:300px;
 }
-.event-image {
-    width: 100%;
+
+.event-image{
+    width:300px;
+    height: 200px;
+}
+.event-image img{
+  
+    height: auto;
+    width: 300px;
     margin: auto;
 }
 .article-shadow {
