--- a/main.css
+++ b/main.css
@@ -27,8 +27,6 @@ body {
 
 
 
-
-
 /*********************************
 **********************************
             HEADER
@@ -420,6 +418,8 @@ hr {
 .article-container {
     padding: 0em 0.5em 1.0em 1.5em;   
 }
+
+
 .av {
     color: black;
     display: inline-block;
@@ -439,6 +439,10 @@ hr {
     border-radius: 0.3em;
     border: none;
 }
+
+/********************************
+********************************/
+
 /********************************
 *********************************
         
@@ -564,5 +568,7 @@ max-width: 500px;
     text-decoration: none;
     font-weight: 0;
 }
+
+
 /********************************
 ********************************/
