--- a/main.css
+++ b/main.css
@@ -391,6 +391,7 @@ hr {
     flex-direction: row;
     display: inline-flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     width: 100%;
 }
 
@@ -404,18 +405,19 @@ hr {
     width: auto;
 }
 
+
+
 .event-shadow {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
-    width:300px;
+    width: 300px;
     max-height: 500px;
-    margin-right: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .event-image{
-    width:300px;
+    width: 300px;
     height: 200px;
 }
 .event-image img{
