--- a/main.css
+++ b/main.css
@@ -407,20 +407,20 @@ hr {
 }
 
 .event-text{
-    font-size: 0.8em;
+  /*  font-size: 1em;*/
 }
 
 .event-shadow {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
-    width: 300px;
+    width: 100%;
     margin-bottom: 15px;
     height 400px;
 }
 
 .event-image{
-    width: 300px;
+    width: 100%;
     height: 200px;
 }
 .event-image img{
