--- a/main.css
+++ b/main.css
@@ -414,10 +414,12 @@ hr {
     width: 100%;
     margin-bottom: 15px;
     height 400px;
+    min-width: 310px;
 }
 
 .event-image{
     width: 100%;
+ 
     height: 200px;
 }
 .event-image img{
@@ -493,12 +495,14 @@ hr {
     
     .event-wrapper{
         
-        flex-direction: column;
+       flex-direction: column;
     }
     
     .medlemmar{
         flex-direction: column;
     }
+    
+   
 }
 /********************************
 ********************************/
