--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body {
     width: 70%;
     text-align: left;
     margin: 0 auto;
-    background-color: #FFFFFF;
+    background-color: red;
 }
 
 /********************************
